<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.25">
  <DUT Name="T_DatLogTest" Id="{85b54c1e-2bee-42c9-9d26-f40d5b78f7a1}">
    <Declaration><![CDATA[TYPE T_DatLogTest :
STRUCT
	bolOk : BOOL := TRUE;
	intCnt : INT := 77;
	strNewText : STRING(20) := 'Test Data log';
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>